# LedWallStudio

./: CMakeLists.txt
lib/: Bitmap.cpp  Bitmap.h  CMakeLists.txt
lib/BitmapEditor/: BitmapEditor.cpp  BitmapEditor.h  Grid.cpp  Grid.h  GridHexagon.cpp  GridHexagon.h
lib/LedWallModes/: BubblesOptionsWidget.cpp  BubblesOptionsWidget.h  FancyScriptOptionsWidget.cpp  FancyScriptOptionsWidget.h  GameOfLifeOptionsWidget.cpp  GameOfLifeOptionsWidget.h  ModeConfigWidget.cpp  ModeOptionsWidget.h  ModesListModel.cpp  ModesListModel.h  MultiBarsOptionsWidget.cpp  MultiBarsOptionsWidget.h  TextOptionsWidget.cpp  TextOptionsWidget.h  TimeOptionsWidget.cpp  TimeOptionsWidget.h
lib/WallController/: Mode.cpp  Mode.h
simulator/: CMakeLists.txt  FakeConnector.cpp  FakeConnector.h  MainWindow.cpp  MainWindow.h  ModeOptions.cpp  ModeOptions.h  PlaybackControlWidget.cpp  PlaybackControlWidget.h  Simulator.cpp  Simulator.h  main.cpp
simulator/support/: CHSV.cpp  CHSV.h  CRGB.cpp  CRGB.h  CRGBPalette16.cpp  CRGBPalette16.h  FastLED.cpp  FastLED.h  TBlendType.h  cJSON.cpp  cJSON.h  colorutils.h  esp32-hal.cpp  esp32-hal.h  esp_log.cpp  esp_log.h  fill_x.cpp  fill_x.h
src/: Bitmap.cpp  Bitmap.h  BitmapEditor.cpp  BitmapEditor.h  BitmapEditorCanvas.cpp  BitmapEditorCanvas.h  BitmapEditorWidget.cpp  BitmapEditorWidget.h  CMakeLists.txt  LedWallConfigWidget.cpp  LedWallConfigWidget.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  UdpConnector.cpp  UdpConnector.h  main.cpp
src/Animations/: BitmapFramesWidget.cpp  BitmapFramesWidget.h  Frame.h  FrameListModel.cpp  FrameListModel.h  FrameListReader.cpp  FrameListWriter.cpp  FrameListWriter.h
src/BitmapEditor/: GridHexagon.cpp  GridHexagon.h  GridRect.cpp  GridRect.h
src/HttpConnector/: Config.cpp  Config.h  HttpConnector.cpp  HttpConnector.h  Mode.cpp  Mode.h
src/LedWallModes/: ModeConfigWidget.cpp  ModeConfigWidget.h  ModeOptionsWidget.cpp  ModesListModel.cpp  ModesListModel.h  MultiBarsOptionsWidget.cpp  MultiBarsOptionsWidget.h  TextOptionsWidget.cpp  TextOptionsWidget.h  WaveOptionsWidget.cpp  WaveOptionsWidget.h
src/WallController/: Mode.cpp  Mode.h  WallController.cpp  WallController.h
studio/: CMakeLists.txt  LedWallConfigWidget.cpp  LedWallConfigWidget.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  UdpConnector.cpp  UdpConnector.h  main.cpp
studio/Animations/: BitmapFramesWidget.cpp  BitmapFramesWidget.h  Frame.h  FrameListModel.h  FrameListReader.cpp  FrameListReader.h  FrameListWriter.cpp
studio/HttpConnector/: Config.cpp  HttpConnector.cpp  HttpConnector.h
test/: BitmapTest.cpp  BitmapTest.h  CMakeLists.txt
test/Animations/: FrameListReaderTest.cpp  FrameListReaderTest.h  FrameListWriteReadbackTest.cpp  FrameListWriteReadbackTest.h  FrameListWriterTest.cpp  FrameListWriterTest.h
